WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74880
RenderStyle::InheritedFlags and RenderStyle::NonInheritedFlags members should be 4 byte aligned
https://bugs.webkit.org/show_bug.cgi?id=74880
Summary
RenderStyle::InheritedFlags and RenderStyle::NonInheritedFlags members should...
Tony Chang
Reported
2011-12-19 12:45:20 PST
RenderStyle::InheritedFlags and RenderStyle::NonInheritedFlags members should be 4 byte aligned
Attachments
Patch
(13.81 KB, patch)
2011-12-19 12:50 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(13.86 KB, patch)
2011-12-19 16:27 PST
,
Tony Chang
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-12-19 12:50:35 PST
Created
attachment 119905
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-19 12:53:20 PST
Attachment 119905
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Last 3072 characters of output: ring/style/RenderStyle.h:248: _effectiveDisplay is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:249: _originalDisplay is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:250: _overflowX is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:251: _overflowY is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:252: _vertical_align is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:253: _clear is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:254: _position is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:255: _floating is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:256: _table_layout is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:258: _unicodeBidi is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:259: _page_break_before is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:261: _page_break_after is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:262: _page_break_inside is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:264: _styleType is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:265: _pseudoBits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:276: _affectedByHover is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:277: _affectedByActive is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:278: _affectedByDrag is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:279: _isLink is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 33 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Early Warning System Bot
Comment 3
2011-12-19 12:57:07 PST
Comment on
attachment 119905
[details]
Patch
Attachment 119905
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/10945041
Ryosuke Niwa
Comment 4
2011-12-19 13:31:37 PST
Interesting. Maybe we need more fixing on Qt: ../../../../Source/WebCore/rendering/style/RenderStyle.cpp:66: error: size of array 'dummyRenderStyle_should_stay_small' is negative distcc[19705] ERROR: compile ../../../../Source/WebCore/rendering/style/RenderStyle.cpp on localhost failed
Tony Chang
Comment 5
2011-12-19 13:35:23 PST
(In reply to
comment #4
)
> Interesting. Maybe we need more fixing on Qt: > > ../../../../Source/WebCore/rendering/style/RenderStyle.cpp:66: error: size of array 'dummyRenderStyle_should_stay_small' is negative > distcc[19705] ERROR: compile ../../../../Source/WebCore/rendering/style/RenderStyle.cpp on localhost failed
Yeah, I'm trying to build WebKit QT to check. It also might be an 32/64 architecture difference (I'm testing on 64).
Tony Chang
Comment 6
2011-12-19 16:27:35 PST
Created
attachment 119943
[details]
Patch
Tony Chang
Comment 7
2011-12-19 16:28:47 PST
It was failing on 32 bit builds because SameSizeAsRenderStyle wasn't RefCounted. I think this patch will compile on qt (must be a 32 bit machine) and in debug.
WebKit Review Bot
Comment 8
2011-12-19 16:30:14 PST
Attachment 119943
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Last 3072 characters of output: ring/style/RenderStyle.h:248: _effectiveDisplay is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:249: _originalDisplay is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:250: _overflowX is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:251: _overflowY is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:252: _vertical_align is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:253: _clear is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:254: _position is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:255: _floating is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:256: _table_layout is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:258: _unicodeBidi is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:259: _page_break_before is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:261: _page_break_after is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:262: _page_break_inside is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:264: _styleType is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:265: _pseudoBits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:276: _affectedByHover is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:277: _affectedByActive is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:278: _affectedByDrag is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/WebCore/rendering/style/RenderStyle.h:279: _isLink is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 33 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tony Chang
Comment 9
2011-12-20 09:31:48 PST
Committed
r103337
: <
http://trac.webkit.org/changeset/103337
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug