RenderStyle::InheritedFlags and RenderStyle::NonInheritedFlags members should be 4 byte aligned https://bugs.webkit.org/show_bug.cgi?id=74880

Reviewed by Ryosuke Niwa.

Use unsigned for all types so we get 4 byte boundaries (unsigned char
means we try to align to 1 byte boundaries) and add setters and
getters for bool members.

Move some members around to make sure we're aligned to 4 byte boundaries.

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::copyNonInheritedFrom):
* rendering/style/RenderStyle.h:
(WebCore::InheritedFlags::NonInheritedFlags::affectedByHover):
(WebCore::InheritedFlags::NonInheritedFlags::setAffectedByHover):
(WebCore::InheritedFlags::NonInheritedFlags::affectedByActive):
(WebCore::InheritedFlags::NonInheritedFlags::setAffectedByActive):
(WebCore::InheritedFlags::NonInheritedFlags::affectedByDrag):
(WebCore::InheritedFlags::NonInheritedFlags::setAffectedByDrag):
(WebCore::InheritedFlags::NonInheritedFlags::isLink):
(WebCore::InheritedFlags::NonInheritedFlags::setIsLink):
(WebCore::InheritedFlags::setBitDefaults):
(WebCore::InheritedFlags::affectedByHoverRules):
(WebCore::InheritedFlags::affectedByActiveRules):
(WebCore::InheritedFlags::affectedByDragRules):
(WebCore::InheritedFlags::setAffectedByHoverRules):
(WebCore::InheritedFlags::setAffectedByActiveRules):
(WebCore::InheritedFlags::setAffectedByDragRules):
(WebCore::InheritedFlags::isLink):
(WebCore::InheritedFlags::setIsLink):

Canonical link: https://commits.webkit.org/91696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103337 268f45cc-cd09-0410-ab3c-d52691b4dbfc